# python-sdk

./: README.md  docker-compose.yml  pyproject.toml  remove-files.sh  setup.py
.github/workflows/: python.yml
dbaas/: README.md  pyproject.toml  setup.py
dbaas/.openapi-generator/: FILES
dbaas/docs/: BackupsApi.md  ChangeControlPanel200Response.md  CreateDatabase200Response.md  DBDetailsDatabase.md  DBDetailsDatabaseNode.md  DBsDetails.md  DatabasesApi.md  GetListBackups200ResponseBackupsInner.md  ReportsApi.md  ResizeDatabaseRequest.md  TurnDatabaseRequest.md
dbaas/test/: test_backups_api.py  test_change_control_panel200_response.py  test_create_database200_response.py  test_create_databases.py  test_create_databases_options.py  test_databases_api.py  test_db_details.py  test_db_details_database.py  test_db_details_database_meta_data.py  test_db_details_database_node.py  test_dbs_details.py  test_dbs_details_databases_inner.py  test_download_backup200_response.py  test_get_database_summary_reports200_response.py  test_get_database_summary_reports200_response_cpu_usage_inner.py  test_get_database_summary_reports200_response_cpu_usage_inner_value_inner.py  test_get_database_summary_reports200_response_disks_usage_inner.py  test_get_list_backups200_response.py  test_get_list_backups200_response_backups_inner.py  test_reports.py  test_reports_api.py  test_reports_result_inner.py  (+2 more)
dns/: README.md  __init__.py  pyproject.toml  setup.py
dns/docs/: Zone.md  (+4 more)
mail/: pyproject.toml  setup.py
object-storage/: pyproject.toml  setup.py
paas/: pyproject.toml  setup.py
(+398 files in other folders)
