[tool.poetry]
name = "openapi_client"
version = "1.0.0"
description = "Liara SDK"
authors = ["OpenAPI Generator Community <info@liara.ir>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Liara", "SDK"]
include = [
    "paas/openapi_client/py.typed", 
    "dbaas/openapi_client/py.typed", 
    "mail/openapi_client/py.typed",
    "dns/openapi_client/py.typed",
    "object-storage/openapi_client/py.typed"
]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
aenum = ">=3.1.11"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
